Fix Pipeline Color Palette text overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -171,7 +171,6 @@ header {
   padding: 5px 0;
 }
 .code_segment_wrapper .instructions_wrapper .meta_instructions span {
-  padding-left: 30px;
   padding: 5px 5px 5px 30px;
 }
 
@@ -547,6 +546,19 @@ pre {
   }
   .simulate1_btns_wrapper {
     flex-wrap: wrap;
+  }
+  .pipeline_color_wrapper {
+    font-size: 12px;
+  }
+  .meta_instructions {
+    border-radius: 15px !important;
+    font-size: 14px;
+  }
+  .meta_instructions span {
+    padding-left: 0px !important;
+  }
+  .meta_instructions span:nth-child(1) {
+    padding-left: 12px !important;
   }
 }
 
